[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
rand = { version = "0.8.5", features = ["small_rng", "alloc"] }
regex = "1.11.1"
sscanf = { git = "https://www.github.com/mich101mich/sscanf", branch = "dev" }
permutohedron = "0.2.4"
num = "0.4.3"
nom = "7.1.3"
cgmath = "0.18.0"
copypasta = "0.10.1"
